# study-privacy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config_base.cfg
notebooks/: export_table_1_and_stats.md
privacy/: __init__.py  registry.py
privacy/attacks/: access.py  uniqueness.py
privacy/cohort_generator/: __init__.py  all_population.py  bariatric_surgery.py  base.py  cancer.py  icd10.py
privacy/indicators/: __init__.py  age.py  base.py  cluster.py  kl_divergence.py  readmission.py  survival.py
privacy/misc/: assignement.py  constants.py  data_wrangling.py  utils.py
privacy/pipelines/: __init__.py  clustering.R  plots.py  reliability.py  table1.py  table_cohort_uniqueness.py  table_knowledge_uniqueness.py  table_n_patients_sr.py  table_simultaneous_variations_uniqueness.py  tables_supp_material.py  uniqueness.py
privacy/plots/: base.py  box_plot.py  countour.py  distribution.py  kaplan_meier.py  population_age_pyramid.py  proportions.py  scatter_by_type.py  utils.py
privacy/pseudonymizer/: __init__.py  base.py  birth.py  stay.py
scripts/: cohort_generator.py  make_cluster_description.py  make_plots.py  make_plots2.py  run.sh  sbatch_table_knowledge_uniqueness.sh  sbatch_table_simultaneous_variations_uniqueness.sh  spark_submit.sh  table1.py  table_knowledge_uniqueness.py  table_simultaneous_variations_uniqueness.py  tables_supp_material.py
