[tool.poetry]
name = "privacy"
version = "0.1.0"
description = ""
authors = ["Ariel Cohen <ariel.cohen-ext@aphp.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = ">=1.3.5"
loguru = "^0.6.0"
openpyxl = "^3.1.2"
scipy = {version = "1.7.3", python = ">=3.7.1,<3.11"}
ortools = "9.5.2237"
polars = "0.17.13"
confit = "0.2.1"
pyarrow = "^12.0.0"
matplotlib = "^3.5"
seaborn = "^0.12.2"
black = "^23.1.0"
statsmodels = "^0.13.5"
ipython = "^7.34.0"
jupyter-black = "^0.3.4"
lifelines = ">=0.27.7"


[tool.poetry.group.extras.dependencies]
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
